<?xml version="1.0" encoding="utf-8"?>
<!--
    DEPRECATED: legacy bottom navigation menu kept for reference.
    If your team confirms this is not used, you can safely delete this file.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_forecast"
        android:icon="@drawable/ic_forecast"
        android:title="@string/title_forecast" />

    <item
        android:id="@+id/navigation_mose"
        android:icon="@drawable/ic_mose"
        android:title="@string/title_mose" />

    <item
        android:id="@+id/navigation_charts"
        android:icon="@drawable/ic_charts"
        android:title="@string/title_charts" />

    <item
        android:id="@+id/navigation_emergency"
        android:icon="@drawable/ic_emergency"
        android:title="@string/title_emergency" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>
