<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_email" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_username" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/option_notification" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/option_radio_1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/option_radio_2" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:text="@string/option_radio_3" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:text="@string/option_button_loguot" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:prompt="@string/option_spinner"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>